css/style.css
/* ... */
#skills .container .backend .mongodb .progress-value {
    -webkit-animation: 3s forwards mongodb;
    animation: 3s forwards mongodb
}

@-webkit-keyframes mongodb {
    0% {
        width: 0
    }

    100% {
        width: 80%
    }
}

@keyframes mongodb {
    0% {
        width: 0
    }

    100% {
        width: 80%
    }
}

#skills .container .backend .rest .progress-value {
    -webkit-animation: 3s forwards rest;
    animation: 3s forwards rest
}

@-webkit-keyframes rest {
    0% {
        width: 0
    }

    100% {
        width: 70%
    }
}

@keyframes rest {
    0% {
        width: 0
    }

    100% {
        width: 70%
    }
}

#skills .container .backend .git .progress-value {
    -webkit-animation: 3s forwards git;
    animation: 3s forwards git
}

@-webkit-keyframes git {
    0% {
        width: 0
    }

    100% {
        width: 80%
    }
}

@keyframes git {
    0% {
        width: 0
    }

    100% {
        width: 80%
    }
}

#skills .container .backend .c .progress-value {
    -webkit-animation: 3s forwards c;
    animation: 3s forwards c
}

@-webkit-keyframes c {
    0% {
        width: 0
    }

    100% {
        width: 98%
    }
}

@keyframes c {
    0% {
        width: 0
    }

    100% {
        width: 98%
    }
}

#skills .container .backend .java .progress-value {
    -webkit-animation: 3s forwards java;
    animation: 3s forwards java
}

@-webkit-keyframes java {
    0% {
        width: 0
    }

    100% {
        width: 90%
    }
}

@keyframes java {
    0% {
        width: 0
    }

    100% {
        width: 90%
    }
}

#skills .container .backend .mad .progress {
    margin-right: 0 !important
}

#skills .container .backend .mad .progress-value {
    -webkit-animation: 3s forwards mad;
    animation: 3s forwards mad
}

@-webkit-keyframes mad {
    0% {
        width: 0
    }

    100% {
        width: 75%
    }
}

@keyframes mad {
    0% {
        width: 0
    }

    100% {
        width: 75%
    }
}

#skills .container .progress {
    background: rgba(255, 255, 255, .1);
    justify-content: flex-start;
    border-radius: 100px;
    align-items: center;
    position: relative;
    padding: 0 5px;
    display: flex;
    height: 20px;
    width: 300px
}

#skills .container .progress-value {
    -webkit-animation: 3s forwards load;
    animation: 3s forwards load;
    border-radius: 100px;
    background: #fff;
    height: 20px;
    width: 0
}

@-webkit-keyframes load {
    0% {
        width: 0
    }

    100% {
        width: 68%
    }
}

@keyframes load {
    0% {
        width: 0
    }

    100% {
        width: 68%
    }
}

#Projects {
    min-height: 100%;
    background: #212121;
    padding: 20px 0
}

#Projects .container {
    display: grid;
    grid-template-rows: auto auto;
    gap: 30px
}

#Projects .container .back_text {
    display: flex;
    width: 100%;
    height: 80%;
    position: absolute;
    z-index: 0;
    justify-content: center;
    align-items: center;
    text-align: center
}

#Projects .container .back_text span {
    position: absolute;
    z-index: 0;
    font-size: 16rem;
    color: #fff;
    opacity: .25 !important;
    font-weight: 700
}

#Projects .container .content {
    font-size: 1rem;
    color: #f5f5f5;
    display: flex;
    justify-content: center;
    flex-direction: column;
    border-radius: 25px;
    padding: 1rem
}

#Projects .container .content h1 {
    display: inline-block;
    width: 100%;
    margin: 20px auto;
    font-size: 3rem;
    color: transparent;
    -webkit-text-stroke: 2px #eedb00;
    letter-spacing: 2.5px
}

#Projects .container .content a {
    margin: 10px 0;
    text-decoration: none;
    font-size: 1.25rem;
    color: #eedb00;
    width: -webkit-max-content;
    width: -moz-max-content;
    width: max-content;
    z-index: 1
}

#Projects .container .content p {
    font-size: 1.5rem;
    font-weight: 300;
    z-index: 1
}

#Projects .container .content .github {
    font-size: 1.75rem;
    color: #fff
}

#Projects .container .video {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%
}

#Projects .container .video img {
    border-radius: 20px;
    height: 500px
}

#contact {
    height: 100%
}

#contact .container {
    background: #171717;
    position: relative;
    height: 100%;
    min-height: -webkit-max-content;
    min-height: -moz-max-content;
    min-height: max-content;
    padding: 10px 5px;
    overflow: hidden;
    display: grid;
    grid-template-rows: repeat(1, 1fr);
    row-gap: 10px
}

#contact .container .form {
    min-width: 100%;
    border: 2px solid rgba(255, 255, 255, .1);
    width: 1000px;
    min-height: 100%;
    height: -webkit-max-content;
    height: -moz-max-content;
    height: max-content;
    border-radius: 10px;
    box-shadow: 0 0 40px rgba(8, 7, 16, .6);
    z-index: 1000;
    overflow: hidden;
    max-width: 100px
}

#contact .container .form .contact-form {
    -webkit-backdrop-filter: blur(10px);
    backdrop-filter: blur(10px);
    position: relative;
    text-align: center;
    overflow: scroll;
    min-height: 100%;
    height: 100%
}

#contact .container .form .contact-form form {
    padding: 2.3rem 2.2rem;
    z-index: 10;
    overflow: hidden;
    position: relative
}

#contact .container .form .contact-form .title {
    color: #fff;
    font-weight: 500;
    font-size: 2rem;
    line-height: 1;
    margin-bottom: 2rem
}

#contact .container .form .contact-form .input-container {
    position: relative;
    margin: 1rem 0
}

#contact .container .form .contact-form .input-container label {
    position: absolute;
    top: 50%;
    left: 15px;
    transform: translateY(-50%);
    padding: 0 .4rem;
    color: #fafafa;
    font-size: 1.15rem;
    font-weight: 400;
    pointer-events: none;
    z-index: 1000;
    transition: .5s
}
/* ... */

